<resources>
    <string name="app_name">News</string>
    <string name="fab_description">Explore options</string>
    <string name="app_title">GLOBAL NEWS</string>
    <string name="options">Options</string>
    <string name="cancel">Cancel</string>
    <string name="reload">Reload</string>
    <string name="search">Search</string>
    <string name="keyword">Keyword</string>
    <string name="type">Type keyword here …</string>
    <string name="source">Source</string>
    <string name="category">Category</string>
    <string name="country">Country</string>
    <string name="spinner_prompt">Click &amp; Select</string>
    <string name="language">Language</string>
    <string name="sample_names">Johnny Cage</string>
    <string name="sample_email">johnny@cage.com</string>
    <string name="logout">Logout</string>
    <string name="trending_news">Trending News</string>
    <string name="all_global_news">All Global News</string>
    <string name="news_sources">News Sources</string>
    <string name="from">From</string>
    <string name="enter_date">Enter date</string>
    <string name="to">To</string>
    <string name="from_date">From date</string>
    <string name="open_and_close_drawer">Open and close drawer</string>
    <string name="programiq_solutions">PROGRAMIQ SOLUTIONS</string>
    <string name="programiq">PROGRAMIQ</string>
    <string name="sign_up_title">SIGN UP TO READ THE NEWS</string>
    <string name="enter_name">Enter your name</string>
    <string name="enter_email">Enter your email</string>
    <string name="enter_password">Enter your password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_account">Create account</string>
    <string name="welcome">WELCOME</string>
    <string name="sign_in">LOGIN</string>
    <string name="sign_in_title">LOGIN TO READ THE NEWS</string>
    <string name="made_by">MADE BY:</string>
    <string name="website_link">https://www.programiqsolutions.com</string>
    <string name="website">WEBSITE:</string>
    <string name="get_started">OK. LET\'S GET STARTED</string>
    <string name="sign_up_to_register">SIGN UP TO CREATE AN ACCOUNT</string>
    <string name="sign_in_to_account">LOGIN IF YOU HAVE AN ACCOUNT</string>
    <string name="error_try_again">Something went wrong. Please try again</string>
    <string name="type_feedback">Type your feedback …</string>
    <string name="send">Send</string>
    <string name="feedback">Feedback</string>
    <string name="optimize_app">Optimize App</string>
    <string name="biometric_prompt_title">Global News Authentication</string>
    <string name="biometric_prompt_subtitle">Please login to get access</string>
    <string name="prompt_info_description">Global News is using Android biometric authentication</string>
    <string name="prompt_info_use_app_password">Use app password</string>
    <string name="private_section">Private Section</string>
    <string name="use_fingerprint">USE FINGERPRINT VERIFICATION</string>
</resources>
