<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/action_button"
        android:drawableStart="@drawable/ic_menu_white"
        style="@style/image_button"
        android:layout_marginBottom="@dimen/ftb_margins"
        android:text="@string/options"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/cancel_button"
        android:drawableStart="@drawable/ic_cancel_white_24dp"
        style="@style/image_button"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/cancel"
        app:layout_constraintEnd_toStartOf="@id/action_button"
        app:layout_constraintTop_toTopOf="@id/action_button" />

    <Button
        android:id="@+id/reload_button"
        android:drawableStart="@drawable/ic_refresh_white_24dp"
        style="@style/image_button"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/reload"
        app:layout_constraintEnd_toStartOf="@id/cancel_button"
        app:layout_constraintTop_toTopOf="@id/action_button" />

    <LinearLayout
        android:id="@+id/options_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/action_button"
        android:layout_marginBottom="@dimen/options_spacing"
        android:gravity="center_vertical"
        android:visibility="gone"
        android:background="@drawable/layout_background_shape">

        <CheckBox
            android:id="@+id/checkBox_country"
            android:text="@string/country"
            style="@style/checkbox" />

        <CheckBox
            android:id="@+id/checkBox_category"
            android:text="@string/category"
            style="@style/checkbox"/>

        <CheckBox
            android:id="@+id/checkBox_source"
            android:text="@string/source"
            style="@style/checkbox"/>

        <CheckBox
            android:id="@+id/checkBox_keyword"
            android:text="@string/keyword"
            style="@style/checkbox"/>

    </LinearLayout>

    <EditText
        android:id="@+id/editText_keyword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/options_spacing"
        android:background="@drawable/layout_background_shape"
        android:hint="@string/type"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingTop="7dp"
        android:paddingBottom="8dp"
        android:textColor="@color/white"
        android:textColorHint="@color/colorPressed"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/options_horizontal"
        app:layout_constraintEnd_toEndOf="@id/options_horizontal" />

    <LinearLayout
        android:id="@+id/options_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@drawable/layout_background_shape"
        android:gravity="start"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/editText_keyword"
        app:layout_constraintEnd_toEndOf="@id/options_horizontal">

        <Spinner
            android:id="@+id/spinner_country"
            style="@style/spinner" />

        <Spinner
            android:id="@+id/spinner_category"
            style="@style/spinner" />

        <Spinner
            android:id="@+id/spinner_source"
            style="@style/spinner" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>