<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint1"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:background="@color/colorPrimary"
    android:paddingStart="30dp"
    android:paddingEnd="0dp"
    android:paddingTop="30dp"
    app:layout_collapseMode="parallax"
    app:layout_collapseParallaxMultiplier="0.7"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/tv_name_tag"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:elevation="5dp"
        android:layout_margin="3dp"
        android:background="@drawable/circle"
        app:layout_constraintVertical_bias="0.3">

        <TextView
            android:id="@+id/name_tag"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            tools:text="JC"
            android:textSize="20sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="3dp"
        android:text="@string/sample_names"
        android:textColor="#fff"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/tv_name_tag"
        app:layout_constraintTop_toTopOf="@id/tv_name_tag"/>

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="7dp"
        android:text="@string/sample_email"
        android:textColor="#fff"
        app:layout_constraintStart_toEndOf="@+id/tv_name_tag"
        app:layout_constraintTop_toBottomOf="@id/tv_name" />

    <TextView
        android:id="@+id/tv_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_logout_white_24dp"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:text="@string/logout"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_name_tag"
        app:layout_constraintTop_toBottomOf="@id/tv_name_tag" />


</androidx.constraintlayout.widget.ConstraintLayout>