<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data class="SignInBinding"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/ftb_margins"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="@dimen/ftb_margins"
            android:layout_marginBottom="@dimen/ftb_margins"
            android:background="@drawable/selected_item_shape"
            android:paddingStart="0dp"
            android:paddingTop="0dp"
            android:paddingEnd="0dp"
            android:paddingBottom="0dp">

            <TextView
                android:id="@+id/sign_in_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/news_header_background"
                android:padding="15dp"
                android:text="@string/sign_in_title"
                android:textColor="#000"
                android:textStyle="bold|normal"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/ftb_margins"
                android:layout_marginTop="@dimen/ftb_margins"
                android:layout_marginEnd="@dimen/ftb_margins"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/black"
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/sign_in_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pass2_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/ftb_margins"
                android:layout_marginEnd="@dimen/ftb_margins"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/black"
                app:errorEnabled="true"
                app:layout_constraintBottom_toTopOf="@+id/sign_in_button"
                app:layout_constraintTop_toBottomOf="@id/email_layout"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pass2_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="0dp"
                android:background="@drawable/button_background_rounded"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>